[package]
name = "arc-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rsa = "0.9"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
